Resume: Fixed line spacing

--- a/css/resume.css
+++ b/css/resume.css
@@ -92,6 +92,7 @@
 
 .entry h6 {
     font-size: 1.1em;
+    line-height: 1.5;
 }
 
 .entry-description {
